--- a/socialchatfront/WebContent/template/AboutUs.html
+++ b/socialchatfront/WebContent/template/AboutUs.html
@@ -5,7 +5,8 @@
 <title>AboutUs</title>
 </head>
 <body>
-<font color="white" face="san serif ms">
-<h1 align="center">This is an about us page</h1></font>
+	<font color="white" face="san serif ms">
+		<h1 align="center">This is an about us page</h1>
+	</font>
 </body>
 </html>
