--- a/socialchatfront/WebContent/template/ContactUs.html
+++ b/socialchatfront/WebContent/template/ContactUs.html
@@ -5,6 +5,8 @@
 <title>ContactUs</title>
 </head>
 <body>
-<font color="white" face="san serif ms"> <h1 align="center">This is an contactUs page</h1></font>
+	<font color="white" face="san serif ms">
+		<h1 align="center">This is an contactUs page</h1>
+	</font>
 </body>
 </html>
