--- a/socialchatfront/WebContent/template/footer.html
+++ b/socialchatfront/WebContent/template/footer.html
@@ -2,8 +2,8 @@
 	<div class="container">
 		<div class="centered clearfix"></div>
 		<div class="bottom-bar">
-			Copyright &copy; CricChat <a href="https://www.facebook.com/">
-				<i style="font-size: 24px" class="fa">&#xf082; </i>
+			Copyright &copy; CricChat <a href="https://www.facebook.com/"> <i
+				style="font-size: 24px" class="fa">&#xf082; </i>
 			</a> <a href="https://twitter.com/login"> <i style="font-size: 24px"
 				class="fa">&#xf099;</i></a> <a href="https://plus.google.com/"> <i
 				style="font-size: 24px" class="fa">&#xf0d5;</i>
